Added text to jupyter

--- a/Graphs/Plot Congestion window.ipynb
+++ b/Graphs/Plot Congestion window.ipynb
@@ -47,15 +47,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
    "outputs": [
@@ -123,6 +114,13 @@
    ],
    "source": [
     "plt.plot(df[(df.index>1000) & (df.index<1100)][\"Time\"],df[(df.index>1000) & (df.index<1100)][\"Window\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The frequent up and down of the congestion window indicates that the window is dropping down to 1 very quickly. This is because the timeout is set to be short since the packets that are not lost have very little RTT."
    ]
   },
   {
@@ -266,6 +264,13 @@
    ],
    "source": [
     "plt.plot(df[\"Time\"],df[\"Window\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is not a lot of considerable losses untill the very end since the ACK is cumulative. With large windows, even if 10% of acks are dropped, an ack following the initial one is likely to make it to the sender. However, towards the end, the number of acks yet to be received decreases and hence there are two instances of losses."
    ]
   },
   {
